--- a/redwoodblog/web/package.json
+++ b/redwoodblog/web/package.json
@@ -11,9 +11,12 @@
     ]
   },
   "dependencies": {
+    "@redwoodjs/auth-dbauth-web": "5.4.3",
     "@redwoodjs/forms": "5.4.3",
     "@redwoodjs/router": "5.4.3",
     "@redwoodjs/web": "5.4.3",
+    "@simplewebauthn/browser": "^7",
+    "humanize-string": "2.1.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
